--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,9 +14,9 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
         <activity
-            android:name="com.codepath.upkar.gridimagesearch.SearchActivity"
+            android:name="com.codepath.upkar.gridimagesearch.activities.SearchActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,8 +25,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.codepath.upkar.gridimagesearch.ImageDisplayActivity"
+            android:name="com.codepath.upkar.gridimagesearch.activities.ImageDisplayActivity"
             android:label="@string/title_activity_image_display" >
+        </activity>
+        <activity
+            android:name="com.codepath.upkar.gridimagesearch.activities.PrefActivity"
+            android:label="@string/title_activity_pref" >
         </activity>
     </application>
 
