--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Holo.Light" >
+        android:theme="@android:style/Theme.Holo" >
+       
         <activity
             android:name="com.codepath.upkar.gridimagesearch.activities.SearchActivity"
             android:label="@string/app_name" >
